[package]
name = "leader-elect"
version = "0.1.0"
authors = ["admin"]
edition = "2018"

[[bin]]
name="ring"
path="src/bin/ring.rs"

[[bin]]
name="bully"
path="src/bin/bully.rs"

[dependencies]
log = "0.4"
colored = "2.0.0"
clap = "3.0.0-beta.2"
chrono = "0.4.19"
derive_more = "0.99.16"
serde_json = "1.0"
serde = { version= "1.0.129", features=["derive"]}
